recursion.cons.lessons.recursion.cons.ButNlast.scala.error
butNlast:11: error: missing arguments for method butNlast in class butNlast;
follow this method with `_' if you want to treat it as a partially applied function
    val y=length(butNlast)-x
                 ^